# ChangeLog for dev-java/wagon-ssh-external
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2007; kiorky <kiorky@cryptelium.net> wagon-ssh-external-1.0.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> wagon-ssh-external-1.0.ebuild:
  Adding maven bootstrap flag

  25 Apr 2007; kiorky <kiorky@cryptelium.net> wagon-ssh-external-1.0.ebuild:
  Migrating to new maven eclass

  18 Apr 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Added as a maven dependency
