@@ -1,4 +1,4 @@
 DIST wagon-ssh-external-1.0.tar.bz2 10082 RMD160 f5b6295ed0a5eee89649371d7343d7bd1bb18876 SHA1 6033224e2eeb3081166770b4920cccf5767be9a6 SHA256 4cbfb6ce78b244d0504c289c71462c8ec4bb2fcbef2193a1e73f8fb026fad7a9
-EBUILD wagon-ssh-external-1.0.ebuild 831 RMD160 47b233594542cb6f2f509f606e4f231861ef2902 SHA1 4e75db8b63de6c1ad3cdb71e9a89ca927615366e SHA256 a93244e3ea780670c23e0342e2657f0eb710672c67699d70daea31b6b39e0085
-MISC ChangeLog 545 RMD160 8cb3a3c2d5a56a501a22854551b19ad25673b3a5 SHA1 561ee673c89f48003cc30a95ea987849c6106246 SHA256 2a5f7d4698a305993cc5042710dd24221b4baa74156e96df955dd44c9a84cf32
+EBUILD wagon-ssh-external-1.0.ebuild 844 RMD160 18d2a64e0fd782bd40b008b75479f2b407ea1754 SHA1 ebbd2dcd67be6b32482298d7d6c7e64fedc0d807 SHA256 2d1ea36b28a59f1cda1c203b66c169020a23427a6a3d4a411bca7a8b4d883a8f
+MISC ChangeLog 664 RMD160 4ee9a605a92a76a9929e41690ff7b643b583e1ea SHA1 b1a054513d08bf29efb2a27a8115ffaac7fe6506 SHA256 06eb1be2e79e5df07660fcc9518b2fe6fa264d7da33aff26fbbf94087e4e2a7a
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
